Fixed a bug in Modelish toMap() conversion.